--- a/app/views/announcement_mailer/new_announcement.text.erb
+++ b/app/views/announcement_mailer/new_announcement.text.erb
@@ -1,3 +1,4 @@
-Announcement#new_announcement
-
-<%= @greeting %>, find me in app/views/announcement_mailer/new_announcement.text.erb
+ Bonjour,
+Une nouvelle annonce, <%= @publication.title %> vient d'être publiée, et peut être facturée au client <%= @publication.customer_name %>.
+Pour générer la facture, rendez-vous sur la page <%= @url %>.
+Bonne journée !
