mistake about text.erb try tu use publication instead of announcement

--- a/app/views/announcement_mailer/new_announcement.text.erb
+++ b/app/views/announcement_mailer/new_announcement.text.erb
@@ -1,4 +1,4 @@
  Bonjour,
-Une nouvelle annonce, <%= @publication.title %> vient d'être publiée, et peut être facturée au client <%= @publication.customer_name %>.
+Une nouvelle annonce, <%= @announcement.title %> vient d'être publiée, et peut être facturée au client <%= @announcement.customer_name %>.
 Pour générer la facture, rendez-vous sur la page <%= @url %>.
 Bonne journée !
